--- a/src/app/components/styles/header.css
+++ b/src/app/components/styles/header.css
@@ -1,5 +1,8 @@
-body{
-    margin: 0 auto;
+html,body, #app{
+    margin: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .header {
