--- a/src/app/views/styles/chooseOption.css
+++ b/src/app/views/styles/chooseOption.css
@@ -2,7 +2,15 @@
     display: grid;
     grid-template: 3 / 1; 
     width: 100%;
-    height: 100%;
+    height: 90%;
+}
+
+.choose-container a {
+    text-decoration: none;
+}
+
+.choose-container a:visited {
+    color: black;
 }
 
 .sickOption, .accountingOption, .controlOption {
