--- a/src/app/views/styles/listCrops.css
+++ b/src/app/views/styles/listCrops.css
@@ -6,6 +6,11 @@
     height: 100%;
 }
 
+.listCrops-container a {
+    text-decoration: none;
+    color: black;
+}
+
 .crop1, .crop2, .crop3 {
     display: flex;
     height: 100px;
