--- a/src/app/views/styles/menu.css
+++ b/src/app/views/styles/menu.css
@@ -21,7 +21,13 @@
     border: 1px solid gray;
     height: 100%;
     width: 100%;
+    text-decoration: none;
 }
+
+.menuHome:visited, .menuDiseases:visited, .menuAccounting:visited, .menuControl:visited, .menuLogOut:visited {
+    color: black;
+}
+
 
 .menuHome {
     background-image: url("../../../public/images/home.svg");
