Se realizo el responsive y estetizo las paginas enfermedades y contabilidad

--- a/client/src/app/components/styles/useful.css
+++ b/client/src/app/components/styles/useful.css
@@ -1,17 +1,24 @@
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-
-.useful table{
-    text-align: center;
-    width: 300px;
-    height: max-content;
-}
-
-.useful {
+.useful-title, .useful-value {
     display: flex;
-    justify-content: center
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.useful-value .useful-value-icon{
+    height: 150px;
+    width: 150px;
+    color: green;
+}
+
+.useful-value .useful-value-p {
+    margin: 0;
+    font-size: 30px;
+}
+
+.useful-icon {
+    color: black;
+    height: 30px;
+    width: 30px;
 }
 
 .useful_income_outlay h3 {
