--- a/client/src/app/views/styles/accounting.css
+++ b/client/src/app/views/styles/accounting.css
@@ -1,9 +1,8 @@
 .accounting-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template:  3fr/1fr;
+    justify-items: center;
     width: 100%;
-    height: 100%;
 }
 
 .accounting-container a, .accounting-container a:visited {
@@ -12,16 +11,20 @@
 }
 
 .income, .outlay, .grossProfit {
-    display: flex;
-    height: 120px;
-    width: 300px;
+    display: grid;
+    grid-template: 170px/300px ;
     justify-content: center;
     align-items: center;
-    border: 1px solid black
+    justify-items: center;
+    border: 1px solid black;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-radius: 3%;
+    box-shadow: 10px 10px 5px gray;
 }   
 
 .income{
-    margin-top:20px;
+    margin-top:50px;
 }
 
 
@@ -51,4 +54,42 @@
     background-position: bottom;
     background-color: rgba(255,255,255,0.6);
     background-blend-mode: lighten;
+}
+
+@media screen and (max-width:1024px) and (min-width:640px){
+
+    .income, .outlay, .grossProfit {
+        width: 550px;
+        height: 200px;
+        border-radius: 4%;
+        
+    }
+
+    .income h3, .outlay h3, .grossProfit h3 {
+        margin: 0;
+        font-size: xx-large;
+    }
+}
+
+@media screen and (min-width:1024px){
+
+    .accounting-container {
+        grid-template: 1fr/1fr 1fr 1fr;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+
+    }
+
+    .income, .outlay, .grossProfit {
+        height: 250px;
+        border-radius: 5%;
+        margin: 20px;
+
+    }
+
+    .income h3, .outlay h3, .grossProfit h3 {
+        margin: 0;
+        font-size: xx-large;
+    }
 }
