--- a/client/src/app/views/styles/detailCrop.css
+++ b/client/src/app/views/styles/detailCrop.css
@@ -60,10 +60,18 @@
     width: 50%;
 }
 
-.checkTask {
+.checkTaskTrue {
     width: 40px;
     height: 40px;
     border-radius: 50%;
     background-color: green;
+    margin-left: 25%;
+}
+
+.checkTaskFalse {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: red;
     margin-left: 25%;
 }
