--- a/client/src/app/views/styles/detailDisease.css
+++ b/client/src/app/views/styles/detailDisease.css
@@ -11,11 +11,17 @@
     padding: 10px 50px 10px 50px;
 }
 
+
+
 .btnContact{
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-decoration: none;
     height: 40px;
     font-weight: bold;
-    font-size: large;
+    font-size: x-large;
     background-color: rgba(66, 99, 66, 0.74)
 }
 
@@ -23,8 +29,10 @@
     height: 200px;
     overflow: hidden;
     /* Add this */
-    position:relative;
-    top:0;
-    left:43px;
 
+}
+
+.carouselDisease div {
+    display: flex;
+    justify-content: center;
 }
