--- a/client/src/app/views/styles/listCrops.css
+++ b/client/src/app/views/styles/listCrops.css
@@ -47,6 +47,7 @@
 .btnAddCrop{
     width: 100%;
     height: 100%;
+    margin-top: 30px;
     font-weight: bold;
     font-size: large;
     border-style: none;
