Se estetizo y se hizo responsive las pantallas de login y recuperar contraseña

--- a/client/src/app/components/styles/recoverpass.css
+++ b/client/src/app/components/styles/recoverpass.css
@@ -1,41 +1,113 @@
 .recover-container {
-    position: absolute;
-    top: 50px;
-    bottom: 0px;
-    right: 0px;
-    left: 0px;
+    height: 100%;
     text-align: center;
-    max-height: auto;
     overflow: hidden;
     background-image: url("../../../public/images/platanos.jpg");
-    background-color: rgba(255,255,255,0.6);
     background-blend-mode: lighten;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 
-.recover-container h2 {
-    margin-top: 30px;
-    margin-bottom: 130px;
+.recover{
+    display: grid;
+    grid-template: 20% 50% 30%/1fr;
+    height: 100%;
+    align-items: center;
+    justify-items: center;
+    background-color: rgba(255,255,255,0.5);
+}
+
+
+
+.recover-icon {
+    font-size: xx-large;
+    color: green;
 }
 
 .recover-pass {
-    display: block;
-    margin: 40px auto;
-    border-radius: 20px;
+    width: 200px;
     height: 25px;
-    width: 250px;
-    padding-left: 15px;
-    box-shadow: -1px 5px 10px gray;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: 1px solid black;
+    background-color: transparent;
+}
+
+.recover-pass::placeholder{
+    color: black;
+    font-size: large;
+}
+
+.group-recover {
+    display: grid;
+    grid-template: 1fr/ 20% 80%;
+    width: max-content;
+    height: 50px;
+}
+
+.group-recover-input{
+    display: grid;
+    justify-content: start;
+}
+
+.group-recover-icon{
+    display: grid;
+    grid-template: 100%/100%;
+    justify-content: end;
 }
 
 .recover-btn {
-    background-color: white;
-    width: 170px;
-    height: 40px;
+    background-color: transparent;
+    border: 1px solid black;
+    color: black;
+    font-weight: bold;
+    font-size: medium;
+    width: max-content;
+    height: 60px;
     border-radius: 8px;
-    margin-top: 75px;
+    margin-top: 45px;
     margin-bottom: 20px;
+}
+
+
+@media screen and (min-width:1024px){
+    .recover-container{
+        display: grid;
+        justify-content: center;
+        height: 100%;
+        text-align: center;
+    }
+
+    .recover{
+        width: 500px;
+        height: 400px;
+        margin-top: 50px;
+        border: .5px solid green;
+        background-color: rgba(255, 255, 255, 0.2);
+    }
+
+    .group-recover{
+        width: 80%;
+    }
+
+    .group-recover-icon{
+        justify-items: center;
+    }
+
+    .recover-icon{
+        color: black;
+        font-size: xx-large;
+    }
+
+    .recover-pass{
+        width: 300px;
+        height: 35px;
+
+    }
+
+
+
 }
 
