--- a/client/src/app/views/styles/chooseOption.css
+++ b/client/src/app/views/styles/chooseOption.css
@@ -17,14 +17,14 @@
     display: grid;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 300px;
 }
 
 .sickOption {
     background-image: url("../../../public/images/Enfermedades.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: rgba(255,255,255,0.6);
+    background-color: rgba(255,255,255,0.2);
     background-blend-mode: lighten;
     background-position: center;
 }
@@ -33,7 +33,7 @@
     background-image: url("../../../public/images/contabilidad.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: rgba(255,255,255,0.6);
+    background-color: rgba(255,255,255,0.2);
     background-blend-mode: lighten;
     background-position: center;
 }
@@ -42,7 +42,22 @@
     background-image: url("../../../public/images/control.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: rgba(255,255,255,0.6);
+    background-color: rgba(255,255,255,0.2);
     background-blend-mode: lighten;
     background-position: center;
+}
+
+@media screen and (min-width: 1024px){
+    .choose-container {
+        display: grid;
+        grid-template: 100% / 33.33% 33.33% 33.34%; 
+    }
+
+    .sickOption, .accountingOption, .controlOption{
+        height: 100%;
+    }
+
+    .accountingOption{
+        background-position: bottom;
+    }
 }
