--- a/client/src/app/views/styles/addCrop.css
+++ b/client/src/app/views/styles/addCrop.css
@@ -1,27 +1,105 @@
-.addCrop-title {
-    text-align: center;
+.addCrop-container {
+    display: grid;
+    grid-template: 20% 80%/1fr;
+    height: 100%;
 }
 
-.addCrop-name, .nameCrop, .addCrop-numberPlants, .numberPlants  {
-    display: block;
-    margin: 0 auto;
+.addCrop-form {
+    display: grid;
+    grid-template: 33% 33% 33%/1fr;
+    justify-items: center;
+    align-items: center;
+}
+
+.group-name, .group-numberPlants {
+    display: grid;
+    grid-template: 2fr/30% 70%;
+    align-items: flex-end;
+    margin: 20px;
+}
+
+.group-name-icon, .group-numberPlants-icon{
+    display: grid;
+    justify-content: end;
+    font-size: xx-large;
+    color: green;
+    margin-right: 10px;
+}
+
+.group-name .addCrop-name, .group-numberPlants .addCrop-numberPlants  {
+    font-weight: bold;
+    color: gray;
+}
+
+.addCrop-title {
+    text-align: center;
+    color: black;
 }
 
 .nameCrop, .numberPlants{
     width: 200px;
     height: 25px;
-    border-radius: 20px;
-    box-shadow: -1px 5px 10px gray;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: 1px solid black;
+    background-color: transparent;
 }
 
-.addCrop-name, .addCrop-numberPlants{
-    margin: 70px 0  0 98px;
-}
 
 .add-btn {
-    margin: 60px 0 0 150px;
     background-color: transparent;
     width: 120px;
     height: 40px;
     border-radius: 8px;
+    border: 1px solid green;
+    color: green;
+}
+
+@media screen and (min-width: 640px) and (max-width:1024px){
+
+    .group-name-input, .group-numberPlants-input{
+        display: grid;
+        grid-template: 2fr/1fr;
+    }
+
+    .group-name, .group-numberPlants {
+        width: 100%;
+    }
+
+    .group-name-input .nameCrop, .group-numberPlants-input .numberPlants{
+        width: 70%;
+    }
+
+    .add-btn{
+        width: 150px;
+        height: 50px;
+        margin-top: 50px;
+    }
+}
+
+@media screen and (min-width: 1024px){
+    .group-name-input, .group-numberPlants-input{
+        display: grid;
+        grid-template: 2fr/1fr;
+    }
+
+    .group-name, .group-numberPlants{
+        grid-template: 2fr/40% 60%;
+        margin-bottom: 100px;
+    }
+
+    .group-name, .group-numberPlants {
+        width: 100%;
+    }
+
+
+    .group-name-input .nameCrop, .group-numberPlants-input .numberPlants{
+        width: 40%;
+    }
+
+    .add-btn{
+        width: 150px;
+        height: 50px;
+    }
 }
