--- a/client/src/app/views/styles/detailCrop.css
+++ b/client/src/app/views/styles/detailCrop.css
@@ -50,6 +50,34 @@
     font-size: x-large;
 }
 
+.optionsCrop{
+    display: grid;
+    grid-template: 50px/50% 50%;
+    margin: 40px 0 20px 0;
+}
+
+.editCrop, .deleteCrop{
+    display: flex;
+    justify-content: center;
+}
+
+.editCrop button, .deleteCrop button{
+    background-color: transparent;
+    border-radius: 10px;
+    width: 80%;
+    cursor: pointer;
+}
+
+.editCrop button {
+    border: 1px solid green;
+    color: green;
+}
+
+.deleteCrop button{
+    border: 1px solid red;
+    color: red;
+}
+
 .check {
     display: flex;
     justify-content: left;
@@ -74,4 +102,10 @@
     border-radius: 50%;
     background-color: red;
     margin-left: 25%;
+}
+
+@media screen and (min-width: 1024px){
+    .editCrop button, .deleteCrop button{
+        width: 50%;
+    }
 }
