--- a/client/src/app/views/styles/detailDisease.css
+++ b/client/src/app/views/styles/detailDisease.css
@@ -1,4 +1,5 @@
 .detailDisease-container {
+    display: grid;
     width: 100%;
     height: 100%;
 }
@@ -19,7 +20,7 @@
     align-items: center;
     color: white;
     text-decoration: none;
-    height: 40px;
+    height: 100%;
     font-weight: bold;
     font-size: x-large;
     background-color: rgba(66, 99, 66, 0.74)
