--- a/client/src/app/views/styles/diseases.css
+++ b/client/src/app/views/styles/diseases.css
@@ -1,10 +1,10 @@
 .diseases-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 200px 200px;
+    grid-template: 1fr / 1fr 1fr;
 }
 
 .diseases-container a {
+    align-items: center;
     text-decoration: none;
     color: black;
 }
@@ -14,9 +14,10 @@
 } 
 
 .disease {
-    display: grid;
+    display: flex;
     justify-content: center;
-    align-content: center;
+    width: 100%;
+    height: 300px;
 }
 
 .disease-moko {
@@ -24,7 +25,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-color: rgba(255,255,255,0.6);
+    background-color: rgba(255,255,255,0.2);
     background-blend-mode: lighten;
 }
 
@@ -33,6 +34,19 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-color: rgba(255,255,255,0.6);
+    background-color: rgba(255,255,255,0.2);
     background-blend-mode: lighten;
+}
+
+@media screen and (min-width:1024px){
+
+    .diseases-container {
+        grid-template: 1fr / 1fr 1fr 1fr;
+}
+
+    .disease {
+        grid-template: 300px/ 33% 33% 34%;
+    }
+
+    
 }
