--- a/client/src/app/views/styles/listCrops.css
+++ b/client/src/app/views/styles/listCrops.css
@@ -1,9 +1,10 @@
 .listCrops-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     width: 100%;
     height: 100%;
+    margin-top: 50px;
 }
 
 .listCrops-container a {
@@ -11,33 +12,34 @@
     color: black;
 }
 
-.crop1, .crop2, .crop3 {
+.crop1 {
     display: flex;
-    height: 100px;
-    width: 300px;
-    align-items: center;
+    height: 140px;
+    width: 30%;
+    margin: 20px;
     border: 1px solid black;
+    border-radius: 10px;
     box-shadow: -5px 1px 8px gray;
     background-color: rgb(155, 173, 155)
 }   
 
-.crop1{
-    margin-top:20px;
-}
 
-.crop1-detail h3 {
+.crop1-detail h3, .crop1-detail p  {
     text-align: center;
-    margin: 0 0 20px 0;
+    margin: 0;
 }
 
-.crop1-detail p{
-    margin: 0 0 10px 20px;
-}
+
 
 .crop1-detail {
     display: grid;
-    grid-template: 3 / 1;
     width: 100%;
+    height: 100%;
+    padding-top: 5px;
+}
+
+.crop1-detail p {
+    font-size: larger;
 }
 
 .addCrop {
@@ -54,4 +56,16 @@
     background-color: rgba(66, 99, 66, 0.74)
 }
 
-
+@media screen and (min-width:1024px) {
+    .crop1 {
+        display: flex;
+        height: 140px;
+        width: 25%;
+        margin: 20px;
+        border: 1px solid black;
+        border-radius: 10px;
+        box-shadow: -5px 1px 8px gray;
+        background-color: rgb(155, 173, 155)
+    }   
+       
+}
